<resources>
    <string name="app_name">TwoActivities</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="editText_Main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="hint_message_received">Ecco il messaggio</string>
    <string name="text_header_reply">Reply Received</string>
</resources>